[package]
name = "actix-schemeredirect-middleware"
description = "scheme (https) redirect middleware for actix-web"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["rustls"] }
actix-utils = "3"
serde = { version = "1.0", features = ["derive"] }
futures-core = "0.3.17"
log = "0.4.11"

[dev-dependencies]
actix-rt = "1"